                  one background class in cat_run_job.                 
                * Added noise to the background to guarantee SPM requirements 
                  of gaussian distributed data in cat_run_job.
                * Added 
(2) Changed:   Update GUI changing the *str parameters from real data input to
               fix cases.

------------------------------------------------------------------------
r1139 | gaser | 2017-06-12 21:54:51 +0200 (Mo, 12 Jun 2017) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_extopts.m
M       cat_conf_opts.m
M       cat_io_cgw2seg.m
M       cat_main.m

Fixed: Typos...

------------------------------------------------------------------------
r1140 | gaser | 2017-06-13 11:21:16 +0200 (Di, 13 Jun 2017) | 13 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_resamp.m
M       templates_surfaces/lc.central.Template_T1_IXI555_MNI152.gii
M       templates_surfaces/lc.central.freesurfer.gii
M       templates_surfaces/lc.sphere.freesurfer.gii
M       templates_surfaces/rc.central.Template_T1_IXI555_MNI152.gii
M       templates_surfaces/rc.central.freesurfer.gii
M       templates_surfaces/rc.sphere.freesurfer.gii

Changed: Temporarily written files during resampling & Smoothing now have
unique names.

------------------------------------------------------------------------
r1141 | gaser | 2017-06-14 08:40:45 +0200 (Mi, 14 Jun 2017) | 7 lines

Changed paths:
M       CHANGES.txt
A       cat_stat_polynomial.m

Added: cat_stat_polynomial for polynomial expansion and orthogonalization
of a function.

------------------------------------------------------------------------

Changed paths:
M       CAT12-Manual.doc
M       CAT12-Manual.pdf
M       CHANGES.txt
M       html/cat_starting.html

Changed: Updated CAT12 manual and added more information and images for 
defining contrasts.
------------------------------------------------------------------------
r1142 | gaser | 2017-06-14 12:50:28